added configuration reader

--- a/templates/index_ver0.html
+++ b/templates/index_ver0.html
@@ -127,9 +127,8 @@
             </div>
             <!-- INFO --->
             <div class="alert alert-info" id="server" style="padding: -20px; height: 500px">
-                <strong>Info: </strong>
                 {% for item in message %}
-                    <p> {{ item }} </p>
+                    <p style="font-size:20px"> {{ item }} </p>
                 {% endfor %}
             </div>
         </div>
